# Robotics_Ros2

ros_ws_a1/src/assignment1/: setup.py
ros_ws_a1/src/assignment1/assignment1/: solution.py
ros_ws_a1/src/assignment1/assignment1/install/: local_setup.sh  setup.sh  setup.zsh
ros_ws_a1/src/assignment1/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
ros_ws_a2/src/Universal_Robots_ROS2_Description/rviz/: view_robot.rviz
ros_ws_a2/src/assignment2/: package.xml  setup.py
ros_ws_a2/src/assignment2/assignment2/: ccik.py
ros_ws_a2/src/assignment2/launch/: franka_launch.py  ur5_launch.py
ros_ws_a2/src/cartesian_control/: package.xml  setup.cfg  setup.py
ros_ws_a2/src/cartesian_control/cartesian_control/: marker_control.py
ros_ws_a2/src/cartesian_control/launch/: franka_launch.py  ur5_launch.py
ros_ws_a2/src/cartesian_control/urdf/: franka_urdf.xml
ros_ws_a2/src/custom_msg/: CMakeLists.txt  package.xml
ros_ws_a2/src/franka_ros2/franka_description/launch/: visualize_franka.launch.py
ros_ws_a2/src/robot_sim/launch/: franka_launch.py
ros_ws_a2/src/robot_sim/src/: robot.cpp  trajectory_executer.cpp
ros_ws_a3/src/assignment3/assignment3/: mp.py
ros_ws_a4/src/assignment4/: package.xml  setup.cfg  setup.py
ros_ws_a4/src/assignment4/assignment4/: est.py
ros_ws_a4/src/assignment4/launch/: estimator.launch.py
ros_ws_a4/src/state_estimator_msgs/: CMakeLists.txt  package.xml
ros_ws_a4/src/state_estimator_msgs/msg/: LandmarkReading.msg  LandmarkSet.msg  SensorData.msg
ros_ws_a5/chain_dynamics/: arm_dynamics_s.py
(+7 files in other folders)
